Change font to PragmataPro to fix ascii table alignment

--- a/apps/bibliotheca/web/static/css/app.css
+++ b/apps/bibliotheca/web/static/css/app.css
@@ -17,7 +17,7 @@ body, form, ul, table {
 }
 
 .article_body {
-  font-family: PragmataPro, monospace;
+  font-family: PragmataPro, sans-serif;;
 }
 
 .toc-button {
